Fixed vertical alignment of logo on scroll header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,8 @@
 
 .logo {
   margin-right: auto;
+  display: flex;
+  align-items: center;
 }
 
 #header > a[href="#menu"] {
